Fix header alignment

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ html,
 body,
 .player-turn-panel-symbol-cross,
 main,
+#player-turn-panel-symbol-cross:before,
 #header-cross:before {
   height: 100%;
 }
@@ -70,6 +71,7 @@ body,
 header,
 .player-turn-panel-symbol-cross,
 main,
+#player-turn-panel-symbol-cross:after,
 #header-cross:after,
 footer {
   width: 100%;
@@ -95,16 +97,35 @@ main,
 }
 
 header {
-  justify-content: space-around;
-  padding: 16px;
+  box-sizing: border-box;
+  height: 132px;
+  justify-content: space-between;
+  padding-left: 16px;
+  padding-right: 16px;
   right: 0;
   top: 0;
 }
 
 header,
 footer {
-  left: 0;
   position: fixed;
+}
+
+.header-symbols-container {
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.header-symbols-container,
+#player-turn-panel-symbol-cross:before,
+#header-cross:before {
+  left: 50%;
+}
+
+.header-symbols-container,
+#player-turn-panel-symbol-cross:after,
+#header-cross:after {
+  top: 50%;
 }
 
 .player-turn-panels {
@@ -188,10 +209,8 @@ footer {
 
 #player-turn-panel-symbol-cross:before,
 #header-cross:before {
-  left: 50%;
   margin-left: -15%;
   width: 30%;
-  height: 100%;
 }
 
 #player-turn-panel-symbol-cross:before,
@@ -207,8 +226,6 @@ footer {
 #header-cross:after {
   height: 30%;
   margin-top: -15%;
-  top: 50%;
-  width: 100%;
 }
 
 #player-turn-panel-symbol-circle {
@@ -222,13 +239,9 @@ footer {
   box-sizing: border-box;
 }
 
-#player-turn-panel-symbol-circle {
-}
-
-
 a,
 .tic-tac-toe-grid-square,
-.reset-button-icon {
+.reset-button-container {
   cursor: pointer;
 }
 
@@ -335,13 +348,6 @@ footer {
   padding-top: 0px;
   width: 24px;
 }
-
-header {
-  flex-direction: column;
-  justify-content: center;
-  padding: 16px;
-}
-
 
 /* * {
   display: flex;
